# meta_learn_qaoa

./: .gitignore  .gitmodules  LICENSE  coblya_evals.py  gen_data.py  pyproject.toml  qaoa.py  test_data_gen.py  trainer.py
data/scripts/: gen_data.py
dataset/: qaoa_dataset.py
models/: lenet.py  qaoa_predictor.py
paper/: #optimizing_qaoa_lstm.lyx#  bibliography.bib  optimizing_qaoa.lyx  optimizing_qaoa.lyx~  optimizing_qaoa.tex  optimizing_qaoa_lstm.lyx  optimizing_qaoa_lstm.lyx~  test.bib
research/: experiments.py
test/: conftest.py  test_all_models.py  test_data_gen.py  test_trainer.py
training/: dataless_train_funcs.py  dataless_trainer.py  train_funcs.py  trainer.py
